[project]
name = "reimbursement-app"
version = "1.0.0"
description = "Employee Reimbursement Request Management System"
authors = [{name = "Reimbursement App", email = "admin@company.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-wtf>=1.2.0",
    "wtforms>=3.1.0",
    "werkzeug>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.3.0",
]

production = [
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-flask>=1.3.0",
]
